<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tulip</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_downloads">Downloads</string>
    <string name="search_hint">Search results will appear here</string>
    <string name="no_results">No results</string>
    <string name="stream_not_downloadable">This stream can not be downloaded</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="empty" />
    <string name="other_results">Other results</string>
    <string name="back">Back</string>
    <string name="season_no">Season %d</string>
    <string name="season_specials">Specials</string>
    <string name="direct_loading_failure">This video can\'t be played directly</string>
    <string name="direct_loading_failure_message">Do you want me to open the webpage with the video?</string>
    <string name="direct_loading_failure_yes">Open the webpage</string>
    <string name="direct_loading_failure_no">Not really</string>
    <string name="tv_show">TV Show</string>
    <string name="library_empty_hint">Your library is empty</string>
    <string name="library_empty_small">Search for some items and add them to favorites</string>
    <string name="web_browser_not_installed">No web browser found. Install one and try again.</string>
    <string name="search_query_hint">Enter the name of a TV Show or a movie</string>
    <string name="starting_download">Starting download</string>
    <string name="select_subtitles">Select subtitles</string>
    <string name="subtitle_download_failure">Selected subtitles failed to load</string>
    <string name="subtitle_adjust_word_heard">I heard it</string>
    <string name="subtitle_adjust_word_seen">I saw it</string>
    <string name="subtitles">Subtitles</string>
    <string name="restart_video">Reload video</string>
    <string name="change_source">Change source</string>
    <string name="solve_captcha_hint">Solve this captcha to continue</string>
    <string name="captcha_solved">Captcha solved</string>
    <string name="captcha_not_solved">Captcha not solved, try another source</string>
    <string name="subtitle_delay_failed">Setting of subtitle delay failed</string>
    <string name="label_no_subtitles">No subtitles</string>
    <string name="not_yet_watched">Never watched</string>
    <string name="next_episode">Next episode</string>
    <string name="episodes">Episodes</string>
    <string name="library_add">Add to library</string>
    <string name="library_remove">Remove from library</string>
    <string name="no_rating">No rating</string>
    <string name="rating_format">Rating: %.1f/10</string>
    <string name="dismiss">Dismiss</string>
    <string name="other_movies">Other movies</string>
    <string name="other_tv_shows">Other TV shows</string>
</resources>